Transition to jdk 15.0.2 for deploy