@@ -10,6 +10,7 @@ import server.entity.process.Process;
 import server.util.JSONUtils;
 
 import java.io.IOException;
+import java.util.stream.Collectors;
 
 public class TeamDeserializer extends StdDeserializer<Team> {
     
@@ -35,11 +36,11 @@ public class TeamDeserializer extends StdDeserializer<Team> {
         team.setTeamLeaderId(node.get("teamLeaderId").asLong());
         team.setParticipants(JSONUtils.splitObjects(node, "participants", String.class)
                 .map(String.class::cast)
-                .toList()
+                .collect(Collectors.toList())
         );
         team.setProcesses(JSONUtils.splitObjects(node, "processes", Process.class)
                 .map(Process.class::cast)
-                .toList()
+                .collect(Collectors.toList())
         );
         return team;
     }
